--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/x-icon" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kettik</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6ZWPXG06J"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-Q6ZWPXG06J');
+    </script>
   </head>
   <body class="font-sans">
     <div id="root"></div>
